<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/namawarung"
        android:text="@string/warung_makanan_kocak"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/etmenupesanan"
        android:text="@string/menu_pesanan"
        android:layout_below="@+id/namawarung"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/etjumlahporsi"
        android:text="@string/jumlah_porsi1"
        android:layout_below="@+id/etmenupesanan"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/totalharga"
        android:text="@string/total_harga"
        android:layout_below="@+id/etjumlahporsi"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>